Fix grid alignment

--- a/packages/ribbon/styles/slide/content/basic.css
+++ b/packages/ribbon/styles/slide/content/basic.css
@@ -1,8 +1,8 @@
 /* Basic */
 
 .slide h2 {
-    margin-top: 6px;
-    margin-bottom: 34px;
+    margin-top: 9px;
+    margin-bottom: 33px;
     color: var(--color-grey);
     font: bold 50px/1 'PT Sans Narrow', sans-serif;
 }
